--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <div class="container justify-content-between">
     <!-- TODO: Replace with actual logo. -->
     <a class="navbar-brand" routerLink="/">
-      <app-svg-icon key="whalemart-logo-with-name" width="160"></app-svg-icon>
+      <img src="/assets/icons/whalemart-logo-with-name.svg" height="35">
     </a>
 
     <button class="navbar-toggler" type="button" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" [attr.aria-expanded]="isMenuOpened" aria-label="Toggle navigation" (click)="isMenuOpened = !isMenuOpened">
