--- a/frontend-webapp/src/app/search/search.component.html
+++ b/frontend-webapp/src/app/search/search.component.html
@@ -3,6 +3,10 @@
     <input type="text" class="form-control form-control-lg" formControlName="query" placeholder="ชื่อตลาดหรือสถานที่">
   </form>
 
+  <ng-container *appSubNavBar>
+    ช่วงราคา วันจัดตลาด ช่วงเวลาที่ตลาดเปิด
+  </ng-container>
+
   <ng-container *ngIf="(searchResult | async) as result; else noSearchQuery">
     <div class="row" *ngIf="result.length > 0; else emptySearchResult">
       <div class="col-xs-12">
