--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -7,9 +7,11 @@
 
     <app-nav-bar-search-box *ngIf="isShowNavBarSearchBox()" @searchBoxIn></app-nav-bar-search-box>
 
-    <button type="button" class="hamburger d-md-none btn btn-outline-primary my-2 my-sm-0" (click)="toggleMenu()">เมนู</button>
+    <button type="button" class="hamburger d-md-none my-2 my-sm-0" [class.active]="isMenuOpened" (click)="toggleMenu()">
+      <span></span>
+    </button>
 
-    <div class="menu-list d-md-block" [class.d-none]="!isMenuOpened">
+    <div class="menu-list d-md-block" [class.hidden]="!isMenuOpened">
       <ul *ngIf="(userStatus | async) as status">
         <li class="nav-item active">
           <a class="nav-link" routerLink="become-lessor">ลงตลาดให้เช่า</a>
