--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -1,5 +1,4 @@
 @import '~styles/common';
-
 :host {
   background: $white;
   z-index: $zindex-fixed;
@@ -9,47 +8,166 @@
 .navbar {
   display: flex;
   flex-direction: column;
-
-  > .main-nav {
+  >.main-nav {
     width: 100%;
     display: flex;
     align-items: center;
     height: 3.75rem;
-
-    > .logo {
+    >.logo {
       margin-right: 1rem;
+      z-index: 9999;
     }
-
-    > .menu-list {
+    >.menu-list {
+      display: flex;
+      position: fixed;
       margin-left: auto;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background: rgba(255, 255, 255, 0.97);
+      justify-content: center;
+      align-items: center;
+      &.hidden {
+        display: none;
+      }
+      @include media-breakpoint-up(md) {
+        width: initial;
+        height: initial;
+        left: initial;
+        right: initial;
+        top: initial;
+        bottom: initial;
+        display: initial;
+        position: initial;
+        background: initial;
+      }
+      .close-menu {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+      }
       ul {
         display: flex;
-        align-items: center;
-        height: 100%;
         margin: 0;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        padding: 15px;
+        align-items: flex-start;
+        @include media-breakpoint-up(md) {
+          flex-direction: initial;
+          justify-content: initial;
+          width: initial;
+          padding: initial;
+          height: 100%;
+          align-items: center;
+        }
         li {
           list-style: none;
-          margin-left: 1rem;
+          margin-left: 0;
+          border-bottom: 1px solid $light-gray;
+          padding: 20px 0px;
+          width: 100%;
+          @include media-breakpoint-up(md) {
+            margin-left: 1rem;
+            border-bottom: initial;
+            padding: initial;
+            width: initial;
+          }
           a {
             color: $dark-gray;
           }
         }
+        a {
+          font-size: 1.1rem;
+          @include media-breakpoint-up(md) {
+            font-size: 0.9rem;
+          }
+        }
       }
       .btn {
-        margin-left: 1rem;
+        margin-left: 0;
+        &:hover {
+          @include media-breakpoint-down(sm) {
+            background: none;
+            color: $primary;
+            text-decoration: underline;
+          }
+        }
+        @include media-breakpoint-down(sm) {
+          border: none;
+          padding: 20px 0;
+        }
+        @include media-breakpoint-up(md) {
+          margin-left: 1rem;
+        }
       }
     }
-
-    > app-nav-bar-search-box {
+    >app-nav-bar-search-box {
       margin-right: 1rem;
     }
-
-    > .hamburger {
+    >.hamburger {
       margin-left: auto;
+      border: none;
+      cursor: pointer;
+      z-index: 9999;
+      &:focus {
+        outline: 0;
+      }
+      span {
+        position: relative;
+        display: block;
+        width: 25px;
+        height: 30px;
+        transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+        &:before,
+        &:after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 0;
+          border-top: 2px solid $dark-gray;
+          position: absolute;
+          top: 50%;
+          margin-top: -1px;
+          transition: transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+          -webkit-transform-origin: center center;
+          transform-origin: center center;
+        }
+        &:before {
+          transform: translate(0, -6px);
+        }
+        &:after {
+          transform: translate(0, 6px);
+        }
+      }
+      &:hover {
+        span {
+          &:before {
+            transform: translate(0, -7px);
+          }
+          &:after {
+            transform: translate(0, 7px);
+          }
+        }
+      }
+      &.active {
+        span {
+          transform: rotate(-90deg);
+          &:before {
+            transform: translate(0, 0) rotate(-45deg);
+          }
+          &:after {
+            transform: translate(0, 0) rotate(45deg);
+          }
+        }
+      }
     }
   }
-
-  > .sub-nav {
+  >.sub-nav {
     width: 100%;
   }
 }
