--- a/frontend-webapp/src/app/admin-verify-receipt/admin-verify-receipt.component.html
+++ b/frontend-webapp/src/app/admin-verify-receipt/admin-verify-receipt.component.html
@@ -1,3 +1,28 @@
-<p>
-  admin-verify-receipt works!
-</p>
+<div class="container">
+  <ng-container *ngIf="receipts">
+    <div *ngFor="let receipt of receipts" class="receipt-item">
+      <div class="row border-bottom-0">
+        <div class="col-4">
+          <img width="100%"  [src]="receipt.profileImage">
+        </div>
+        <div class="col-8">
+          <dl>
+            <dt>ID</dt>
+            <dd>{{ receipt.id }}</dd>
+            <dt>Payment date</dt>
+            <dd>{{ receipt.date }}</dd>
+            <dt>Payment amount</dt>
+            <dd>{{ receipt.amount }}</dd>
+          </dl>
+          <button class="btn btn-outline-success">Accept</button>
+          <button class="btn btn-outline-danger">Reject</button>
+        </div>
+        <hr width="100%">
+      </div>
+      
+    </div>
+  </ng-container>
+  
+</div>
+    
+
